--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
+  width: 100%;
+  color:rosybrown;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imagesContainer {
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.planetImage {
+  width: 40%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bookImage {
+  width: 200px;
+  
+}
+
+
+
+.calendarButton {
+  position: absolute;
+  margin-left: 70%;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: all 1s ease-in-out;
+
 }
 
-.App-link {
-  color: #61dafb;
+.calendarButton:hover {
+  transform: translatey(40%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mercuryTitle  {
+  font-size: 6rem;
+  font-family: 'Mate SC';
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.dayTitle {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 0;
+  
+}
+
+.starContainer {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0%;
+  left: 0%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  z-index: -1;
+ 
+
+}
+
+.stars {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: rosybrown;
+
+}
+
+#starPosition1 {
+  top: 40%;
+  left: 20%;
+}
+
+#starPosition2 {
+  top: 30%;
+  left: 70%;
+}
+
+#starPosition3 {
+  top: 70%;
+  left: 10%;
+}
+
+#starPosition4 {
+  top: 70%;
+  left: 10%;
+}
+
+#starPosition5 {
+  top: 90%;
+  left: 80%;
+}
+
+#starPosition6 {
+  top: 50%;
+  right: 10%;
 }
