--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap'); 
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Mate SC', 'Roboto', sans-serif;
+  background-color: rgb(36, 36, 49);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
